Random Number feature added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,10 @@
     Generate Words
   </button>
 
+  <button class="btn btn-danger" (click)="generateRandom()" >
+    Generate Random
+  </button>
+
 
 
   <div *ngIf="words" class="card car-body">
